tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__ASoulVessel-AAAAAAAAAAAAAAAAAAAAqA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 168,
  "prerequisites": [
    166
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Soul Vial is used later in HV Ender IO machines. For now though you may find it convenient to deal with....troublesome mobs. The Soul Vial is reusable. Just right-click any living entity to steal its soul. Right-click again to release it in the environment.\n\nThe possibilities swirl in your head...",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lA Soul Vessel",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    166
  ],
  "rewards": [],
  "tasks": []
}
