tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__AceticAcid-AAAAAAAAAAAAAAAAAAADVA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 852,
  "prerequisites": [
    846,
    847
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Acetic acid can be made out of Oxygen and Ethylene. Alternatively, it can be made out of Biomass, Wood Vinegar or Vinegar. It is an important part of making Ethenone on your way to Cetane-Boosted Diesel.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lAcetic Acid",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    846,
    847
  ],
  "rewards": [],
  "tasks": []
}
