tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__AdvancedCircuits-AAAAAAAAAAAAAAAAAAADRg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 838,
  "prerequisites": [
    785,
    793
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Finally, the HV circuit! To make it, you need good integrated circuits, RAM, an integrated logic circuit, and transistors.\n\nBy the way, circuits get cheaper to make as you go along, but not till HV.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lAdvanced Circuits",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    785,
    793
  ],
  "rewards": [],
  "tasks": []
}
