tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__AllWeAreisDustin-AAAAAAAAAAAAAAAAAAAHOg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1850,
  "prerequisites": [
    1867
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Looking for an alternative to flowing water for your mobfarm? Use a fan to blow mobs or items where you want. Apply a redstone signal to activate.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lAll We Are is Dust in the Wind",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1867
  ],
  "rewards": [],
  "tasks": []
}
